# singulal-gauss-quadrature

./: CMakeLists.txt  Doxyfile  README.md
cmake/Modules/: dependencies.cmake
html/: annotated.html  class_g_q_jacobi_1_1_gauss_chebyshev_rule-members.html  class_g_q_jacobi_1_1_gauss_chebyshev_rule.html  class_g_q_jacobi_1_1_gauss_jacobi_rule-members.html  class_g_q_jacobi_1_1_gauss_jacobi_rule.html  class_g_q_jacobi_1_1_gauss_legendre_rule-members.html  class_g_q_jacobi_1_1_gauss_legendre_rule.html  class_g_q_log_1_1_gauss_log_rule-members.html  class_g_q_log_1_1_gauss_log_rule.html  class_g_q_log_1_1_gauss_pure_log_rule-members.html  class_g_q_log_1_1_gauss_pure_log_rule.html  class_gauss_rule-members.html  class_gauss_rule.html  classes.html  dir_13e138d54eb8818da29c3992edef070a.html  dir_4c1218c876c43d7e200b06b6c2933327.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  functions.html  functions_func.html  functions_vars.html  gauss-jacobi_8hpp_source.html  gauss-log_8hpp_source.html  gauss-rule_8hpp_source.html  hierarchy.html  index.html  md__r_e_a_d_m_e.html  menudata.js  pages.html
html/search/: all_0.js  all_1.js  all_3.js  all_5.js  all_6.js  classes_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  pages_0.js  searchdata.js  variables_0.js
latex/: annotated.tex  class_g_q_jacobi_1_1_gauss_chebyshev_rule.eps  class_g_q_jacobi_1_1_gauss_chebyshev_rule.tex  class_g_q_jacobi_1_1_gauss_jacobi_rule.eps  class_g_q_jacobi_1_1_gauss_jacobi_rule.tex  class_g_q_jacobi_1_1_gauss_legendre_rule.eps  class_g_q_jacobi_1_1_gauss_legendre_rule.tex  class_g_q_log_1_1_gauss_log_rule.eps  class_g_q_log_1_1_gauss_log_rule.tex  class_g_q_log_1_1_gauss_pure_log_rule.eps  class_g_q_log_1_1_gauss_pure_log_rule.tex  class_gauss_rule.eps  class_gauss_rule.tex  files.tex  gauss-jacobi_8hpp_source.tex  gauss-log_8hpp_source.tex  gauss-rule_8hpp_source.tex  hierarchy.tex  md__r_e_a_d_m_e.tex  refman.tex
src/GQJacobi/: gauss-jacobi.hpp  gauss-log.hpp  (+2 more)
test/: CMakeLists.txt  main  main.cpp
(+4 files in other folders)
